--- a/map.html
+++ b/map.html
@@ -372,6 +372,8 @@
         </div>
     </footer>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/image-map-resizer@1.0.10/js/imageMapResizer.min.js"></script>
     <script>
         /*Mapp Toggle Script*/
         const groundMap = document.getElementById("groundMap");
