--- a/feedback.html
+++ b/feedback.html
@@ -230,7 +230,7 @@
 
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_subject" value="New Feedback!">
-            <input type="hidden" name="_redirect" value="https://aminamalik21.github.io/Website/thankyou.html">
+            <input type="hidden" name="_next" value="https://aminamalik21.github.io/Website/thankyou.html">
 
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" required>
